# strawberry-beats

./: .gitignore  .pre-commit-config.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit.yml
backend/: Dockerfile  Makefile  docker-compose.yml  main.py  manage.py  mypy.ini  pyproject.toml  pytest.ini
backend/api/: schema.py
frontend/: .editorconfig  .gitignore  .prettierrc  codegen.yml  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/components/: logo.tsx
frontend/components/icons/: cowbell.tsx  hi-hat.tsx  kick.tsx  snare.tsx
frontend/helpers/: graphql.ts
frontend/pages/: _app.tsx  index.tsx
