[tool.poetry]
authors = ["Patrick Arminio <patrick.arminio@gmail.com>"]
description = ""
license = "MIT"
name = "strawberry-beats-backend"
version = "0.1.0"

[tool.poetry.dependencies]
broadcaster = "^0.2.0"
python = "^3.8"
strawberry-graphql = "^0.56.2"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
asyncio-redis = "^0.16.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pdbpp = "^0.10.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
